# private-ai-gateway

./: Cargo.toml  Dockerfile.smoke  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  (+1 more)
clients/: README.md
clients/e2ee-rs/: Cargo.toml
clients/e2ee-rs/src/: lib.rs
deploy/: README.md  aggregator.conf  aggregator.env  compose.privatemode.yaml  compose.yaml  gateway.config.example.json  privatemode.env.example  render-privatemode-compose.sh  upstreams.example.json
docs/: aci-related-work.md  aci-spec.md  aci-test-vectors.md  attested-confidential-inference.md  attested-session-system.md  configuration-reference.md  frontend-middleware-backend.md  live-e2e-test-suite.md  middleware-integration.md  roadmap.md  router-mode-provider-review.md  upstream-verification-lifecycle.md
examples/: live_chutes_embedding.rs  verify_aci_artifacts.rs
scripts/: contract_verifier_bridge.py  dstack_os_image.py  live_verify_phala_direct.py  local_multi_upstream_smoke.sh  phala_multi_upstream_smoke.sh  private_ai_provider_verifier.py  soundness_phala_direct.py
spec/: README.md  aci.md  quickstart.md  related-work.md  test-vectors.md
src/: dstack.rs  lib.rs  main.rs
tests/: aci_cli.rs  aci_service_surface.rs  aggregator_scenarios.rs  auth_and_retention.rs  dstack_live.rs  entrypoint.rs  forward_binding_reverify.rs  http.rs  identity.rs  keyset_revocation.rs  middleware_catalog.rs  middleware_completion.rs  provider_e2e.rs  receipt.rs  secret_ai_bridge.rs  service.rs  smoke_scripts.rs  spec_vectors.rs  upstream_config_admin.rs  upstream_verifier.rs
(+207 files in other folders)
